[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/hud/name_plate/NamePlate.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/dummy_actor/dummy_actor.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 1.2

[sub_resource type="CylinderShape" id=2]
radius = 0.3
height = 0.1

[sub_resource type="CapsuleMesh" id=3]
radius = 0.3
mid_height = 1.2

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true

[sub_resource type="CylinderMesh" id=5]
top_radius = 0.1
bottom_radius = 0.2
height = 0.2

[node name="NPC" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="CollisionShapeBody" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShapeBase" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0 )
shape = SubResource( 2 )

[node name="DEBUG_Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="DEBUG_Head" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.016, 0.58, -0.266 )
mesh = SubResource( 5 )
material/0 = null

[node name="NamePlate" parent="." instance=ExtResource( 1 )]

[connection signal="mouse_entered" from="." to="." method="_on_NPC_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NPC_mouse_exited"]
